# BackendSoftwareEngineerPrepare

./: README.md
Learning Progress/: 计划.txt
Learning Progress/week 1/: Copy of Resume Worksheet_final.docx  Copy of TEMPLATE - Career Planning Worksheet.docx  Copy_sequoia_info.html  Copy_sequoia_info.txt  HtmlFoundemental.html  Intro to HTML.html
Learning Progress/week 1/Original Notes Intro to HTML_files Website/: 10930095205(1).html  10930095205.html  60824-44012d62e40fec93.js.下载  ClientFramework-abc23497914368d2.js.下载  aif-production.html  app-3fc9696b6c21a221.js.下载  app-d5d35106dee9b959.css  f(1).txt  f.txt  gtm.js.下载  hotjar-3664679.js.下载  js  js(1)  js(2)  saved_resource(1).html  saved_resource.html
RealTimeDataMonitorDemo/: Dockerfile  Makefile  README.md  docker-compose.yml  projectInfo.txt  pyproject.toml  send_once.py  代码详细注释与学习指导.md  运行指南.md
RealTimeDataMonitorDemo/app/: __init__.py  ingest.py  main.py  pipeline.py  telemetry_pb2.py  telemetry_pb2_grpc.py  test_redis.py
RealTimeDataMonitorDemo/proto/: options.proto  telemetry.proto
RealTimeDataMonitorDemo/tests/: test_random_data.py
